vlib/v/checker/tests/optional_variable_err.vv
fn main() {
	_ := ?bool(false)
}
